[package]
name = "project5"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
enum_stringify = "0.6.5"
indexmap = "2.14.0"
nom = "8.0.0"
scraper = "0.27.0"
tokio = { version = "1.52.3", features = ["full", "net"] }
tokio-rustls = "0.26.4"
url = "2.5.8"
webpki-roots = "1.0.8"
